# Office-Suite

./: .gitignore  GAP_ANALYSIS_REPORT.md  GAP_CLOSURE_PLAN.md  Office_Suite_4.0_设计方案_v2.md  P0_P10_ROADMAP.md  README.md  STATUS.md  demo_all_formats.py  pyproject.toml  world_book_day.yml
docs/: ppt_design_resources.md
examples/: ai_generate_ppt.py  ant_story.pptd.yaml  ant_story.pptx  apple_benefits.pptx  apple_benefits.yml  apple_benefits_v2.pptx  community_renovation.pptx  community_renovation.yml  render_ant_story.py  render_freeform_demo.py  study_motivation.pptx  study_motivation.yml
minimax-multimodal-toolkit/: SKILL.md
office_suite/: .gitignore  SKILL.md  __init__.py  __main__.py  constants.py
office_suite/ai/: __init__.py  critique.py  dsl_generator_prompt.py  intent.py  suggest.py
office_suite/catalog/: __init__.py  catalog.py  catalog.yaml  types.py
office_suite/components/: __init__.py  registry.py
office_suite/design/: __init__.py  auto_style.py  freeform_shapes.py  ornaments.py  (+3 more)
tests/: conftest.py  hello_world.yml  test_catalog.py  test_design_enhancements.py  test_freeform.py  test_icon_assets.py  test_layout_engine.py  test_multifile_presentation.py  test_p0_enhancements.py  test_p1_enhancements.py  test_pagination.yml  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_pipeline_nodes.py  test_pptx_text_layout.py  test_semantic_icon.py  test_semantic_layouts.py  test_style_ref.py  test_tools_check.py  test_unsplash_assets.py
(+192 files in other folders)
